[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toon-output-parser"
version = "0.1.1"
description = "LangChain OutputParser for TOON (Token-Oriented Object Notation): LLM generates TOON, parser decodes to JSON/Pydantic."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "sungreong"}]
keywords = ["langchain", "output-parser", "toon", "structured-output", "pydantic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/sungreong/toon-output-parser"
Repository = "https://github.com/sungreong/toon-output-parser"
Issues = "https://github.com/sungreong/toon-output-parser/issues"

[project.optional-dependencies]
langchain = [
  "langchain-core>=0.1.0",
]
openai = [
  "langchain-openai>=0.1.0",
]
community = [
  "langchain-community>=0.1.0",
]
toon = [
  # Official implementation (preferred). If this extra fails due to availability,
  # install from GitHub: `pip install git+https://github.com/toon-format/toon-python`
  "toon-python>=0.1.0",
]
dev = [
  "build>=1.2.0",
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.3.0",
  "mypy>=1.7",
  "tiktoken>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples", "scripts", "tests/diagnostics"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "F541", "UP"]
